<resources>
    <string name="app_name">Mitzuli</string>
    <string name="settings">Settings</string>
    <string name="translate_button">TRANSLATE</string>
    <string name="speak_now">speak now</string>
    <string name="translation_copied">Translation copied</string>
    <string name="share_with">Share translation with</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_src_audio">Voice output</string>
    <string name="action_mic">Voice input</string>
    <string name="action_camera">Camera input</string>
    <string name="action_keyboard">Keyboard input</string>
    <string name="action_clear">Clear</string>
    <string name="action_trg_audio">Voice output</string>
    <string name="action_copy">Copy</string>
    <string name="action_share">Share</string>
    <string name="error_dialog_title">Error</string>
    <string name="update_dialog_title">Update now?</string>
    <string name="update_dialog_update_button">Update</string>
    <string name="update_dialog_packages_to_update">The following packages will be updated:</string>
    <string name="no_update_dialog_message">Everything is up to date!</string>
    <string name="update_progress_dialog_title">Updating</string>
    <string name="update_progress_dialog_message">Updating packages&#8230;</string>
    <string name="offline_on_install_error_title">Installation failed</string>
    <string name="offline_on_install_error_message">Internet access is required to install language pairs.</string>
    <string name="offline_on_translate_error_title">Translation failed</string>
    <string name="offline_on_translate_error_message">Install language pairs to translate without Internet access.</string>
    <string name="toast_unavailable_tts">Speech output isn\'t available for this language</string>
    <string name="toast_unavailable_tts_offline">Speech output isn\'t available for this language without Internet access</string>
    <string name="toast_unavailable_stt">Speech input isn\'t available for this language</string>
    <string name="toast_unavailable_stt_offline">Speech input isn\'t available without Internet access</string>
    <string name="toast_unavailable_ocr">Camera input isn\'t available for this language</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_language">Display language</string>
    <string name="pref_entry_value_default_display_language">System default</string>
    <string name="pref_dialog_title_confirm_display_language">Change the language?</string>
    <string name="pref_dialog_message_confirm_display_language">The app will be restarted to apply the changes.</string>
    <string name="pref_title_beta_packages">Beta language pairs</string>
    <string name="pref_description_beta_packages">Enable beta language pairs (translation quality might be poor)</string>
    <string name="pref_title_mark_unknown">Mark unknown words</string>
    <string name="pref_description_mark_unknown">Display marks for unknown words</string>
    <string name="pref_title_auto_tts">Automatic TTS</string>
    <string name="pref_description_auto_tts">Automatically speak translated text in microphone mode</string>
    <string name="pref_header_updates">Updates</string>
    <string name="pref_title_autocheck_updates">Auto-check for updates</string>
    <string name="pref_description_autocheck_updates">Automatically check for updates for your language pairs</string>
    <string name="pref_title_check_updates">Check for updates</string>
    <string name="pref_description_check_updates">Check for updates for your language pairs</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_title_external_storage">Use external storage</string>
    <string name="pref_description_external_storage">Install packages in external storage</string>
    <string name="pref_dialog_title_confirm_external_storage">Change the install location?</string>
    <string name="pref_dialog_message_confirm_external_storage">All the language pairs downloaded for offline use will be uninstalled.</string>
    <string name="pref_title_signature_verification">Verify package signatures</string>
    <string name="pref_description_signature_verification">Use signature verification to protect from code injection attacks</string>
    <string name="pref_header_development">Development</string>
    <string name="pref_title_ocr_debugging">OCR debugging</string>
    <string name="pref_description_ocr_debugging">Save files for OCR debugging in external storage</string>
    <string name="pref_header_about">About</string>
    <string name="pref_title_licenses">Open source licenses</string>
    <string name="pref_description_licenses">License details for open source software</string>
    <string name="offline_on_update_error_title">Update failed</string>
    <string name="offline_on_update_error_message">Internet access is required to update language pairs.</string>
    <string name="language_name_afr">Afrikaans</string>
    <string name="language_name_ara">Arabic</string>
    <string name="language_name_arg">Aragonese</string>
    <string name="language_name_ast">Asturian</string>
    <string name="language_name_bos">Bosnian</string>
    <string name="language_name_bre">Breton</string>
    <string name="language_name_bul">Bulgarian</string>
    <string name="language_name_cat">Catalan</string>
    <string name="language_name_ces">Czech</string>
    <string name="language_name_cym">Welsh</string>
    <string name="language_name_dan">Danish</string>
    <string name="language_name_eng">English</string>
    <string name="language_name_epo">Esperanto</string>
    <string name="language_name_eus">Basque</string>
    <string name="language_name_fra">French</string>
    <string name="language_name_glg">Galician</string>
    <string name="language_name_hat">Haitian</string>
    <string name="language_name_hbs">Serbo-Croatian</string>
    <string name="language_name_heb">Hebrew</string>
    <string name="language_name_hin">Hindi</string>
    <string name="language_name_hrv">Croatian</string>
    <string name="language_name_isl">Icelandic</string>
    <string name="language_name_ind">Indonesian</string>
    <string name="language_name_ita">Italian</string>
    <string name="language_name_kaz">Kazakh</string>
    <string name="language_name_mkd">Macedonian</string>
    <string name="language_name_mlt">Maltese</string>
    <string name="language_name_msa">Malay</string>
    <string name="language_name_nld">Dutch</string>
    <string name="language_name_nno">Norwegian Nynorsk</string>
    <string name="language_name_nob">Norwegian Bokmål</string>
    <string name="language_name_nor">Norwegian</string>
    <string name="language_name_oci">Occitan</string>
    <string name="language_name_pol">Polish</string>
    <string name="language_name_por">Portuguese</string>
    <string name="language_name_ron">Romanian</string>
    <string name="language_name_slv">Slovenian</string>
    <string name="language_name_sme">Northern Sami</string>
    <string name="language_name_spa">Spanish</string>
    <string name="language_name_srd">Sardinian</string>
    <string name="language_name_srp">Serbian</string>
    <string name="language_name_swe">Swedish</string>
    <string name="language_name_tat">Tatar</string>
    <string name="language_name_tet">Tetum</string>
    <string name="language_name_urd">Urdu</string>
    <string name="country_name_aran">Aran</string>
    <string name="country_name_bra">Brazil</string>
    <string name="country_name_usa">US</string>
    <string name="country_name_valencia">Valencia</string>
    <string-array name="supported_display_languages" translatable="false">
        <item>an</item>
        <item>ca</item>
        <item>en</item>
        <item>es</item>
        <item>eu</item>
        <item>fr</item>
    </string-array>
</resources>