<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Mikel Artetxe <artetxem@gmail.com>
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:key="pref_key_general">

        <ListPreference
            android:key="pref_key_display_language"
            android:title="@string/pref_title_display_language"
            android:negativeButtonText="@string/cancel_button" />

        <CheckBoxPreference
            android:key="pref_key_beta_packages"
            android:summary="@string/pref_description_beta_packages"
            android:title="@string/pref_title_beta_packages"
            android:defaultValue="false" />
        
        <CheckBoxPreference
            android:key="pref_key_mark_unknown"
            android:summary="@string/pref_description_mark_unknown"
            android:title="@string/pref_title_mark_unknown"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="pref_key_auto_tts"
            android:summary="@string/pref_description_auto_tts"
            android:title="@string/pref_title_auto_tts"
            android:defaultValue="true" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_header_updates"
        android:key="pref_key_updates">
        
        <CheckBoxPreference
            android:key="pref_key_autocheck_updates"
            android:summary="@string/pref_description_autocheck_updates"
            android:title="@string/pref_title_autocheck_updates"
            android:defaultValue="true" />
        
        <Preference
            android:key="pref_key_check_updates"
            android:summary="@string/pref_description_check_updates"
            android:title="@string/pref_title_check_updates" />
        
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_header_advanced"
        android:key="pref_key_advanced">

        <CheckBoxPreference
            android:key="pref_key_external_storage"
            android:summary="@string/pref_description_external_storage"
            android:title="@string/pref_title_external_storage"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="pref_key_signature_verification"
            android:summary="@string/pref_description_signature_verification"
            android:title="@string/pref_title_signature_verification"
            android:defaultValue="true" />

    </PreferenceCategory>


    <!--PreferenceCategory
        android:title="@string/pref_header_development"
        android:key="pref_key_development">

        <CheckBoxPreference
            android:key="pref_key_ocr_debugging"
            android:summary="@string/pref_description_ocr_debugging"
            android:title="@string/pref_title_ocr_debugging"
            android:defaultValue="false" />

    </PreferenceCategory-->
    
    
    <PreferenceCategory
        android:title="@string/pref_header_about"
        android:key="pref_key_about">

        <Preference
            android:key="pref_key_licenses"
            android:summary="@string/pref_description_licenses"
            android:title="@string/pref_title_licenses" />

        <Preference
            android:key="pref_key_acknowledgments"
            android:summary="@string/pref_description_acknowledgments"
            android:title="@string/pref_title_acknowledgments" />

    </PreferenceCategory>
    
</PreferenceScreen>
