<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Mikel Artetxe <artetxem@gmail.com>
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_src_audio"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/action_src_audio"
        android:icon="@drawable/ic_action_src_audio"/>

    <item
        android:id="@+id/action_mic"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/action_mic"
        android:icon="@drawable/ic_action_mic"/>

    <item
        android:id="@+id/action_camera"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/action_camera"
        android:icon="@drawable/ic_action_camera"/>

    <item
        android:id="@+id/action_keyboard"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:title="@string/action_keyboard"
        android:icon="@drawable/ic_action_keyboard"/>

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="5"
        app:showAsAction="always"
        android:title="@string/action_clear"
        android:icon="@drawable/ic_action_clear"/>

</menu>